--- a/http_methods/templates/base.html
+++ b/http_methods/templates/base.html
@@ -7,15 +7,14 @@
     <title>{{title}}</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='login.css')}}">
     <!--preferable background color Midnight Blue :rgba(25, 25, 112, 0.7)-->
     <style>
 
     body   {
-                background-image: url("{{ url_for('static', filename='background.webp') }}");
-                background-size: 100% 100%;
-                background-position: center;
+                background-image: url("{{ url_for('static', filename='squid2.jpg') }}");
+                background-size: cover;
                 background-repeat: no-repeat;
+
             }
 
     .messages {
@@ -40,9 +39,9 @@
         width: fit-content;
         margin-top: 100px;
         padding: 30px;
-        font-size: 1.8em;
+        font-size: 1.3em;
         font-family: 'Kanit', sans-serif;
-        background-color: rgba(128, 0, 32, 0.7);
+        background-color: rgba(128, 0, 32, 0.9);
         font-weight: bold;
         text-align: center;
         color: white;
