--- a/http_methods/templates/home.html
+++ b/http_methods/templates/home.html
@@ -5,7 +5,9 @@
 
 	<div class="welcome" >
 		<div>Your haking methods really matters.</div>
-		<div>Flag Format logon{...}</div>
+		<div>Flag Format slay{...}</div>
+	<!-- /flag -->
+	<!-- /home -->
 
 	</div>
 {% endblock content %}
